# woof

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  VAULT_FOREMAN.md  justfile  pyproject.toml  pyrightconfig.json
.agent-memory/: e2-contract-readiness.md
.claude/commands/: wf.md
.github/workflows/: ci.yml  release.yml
.woof/: agents.toml  policy.toml  prerequisites.toml  quality-gates.toml  test-markers.toml
.woof/codebase/: CONCERNS.md  CONVENTIONS.md  CURRENT-ARCHITECTURE.md  INTEGRATIONS.md  PRINCIPLES.md  STACK.md  STRUCTURE.md  TARGET-ARCHITECTURE.md  TESTING.md
checks/: __init__.py  registry.py
checks/runners/: check_6_critique_blocker.py
cli/: dispatcher.py
cli/commands/: __init__.py  check.py  gate.py
docs/: CONTEXT.md  architecture.md  audit-2026-05-19-deep-code-review.md  backlog.md  consumers.md  course-correction-2026-05-21.md  efficiency-evals.md  implementation-plan.md  research.md
docs/adr/: 001-orchestration-topology.md  002-graph-led-role-routing.md  003-issue-tracker-abstraction.md  004-cartography-prerequisite.md  005-skill-suite.md  006-operational-resilience.md  007-operator-skill-umbrella.md  008-dispatch-process-supervision.md  009-structural-cartography-index.md  010-merged-engine-topology.md  011-work-units-execution-contract.md  012-interactive-harness-dispatch.md  012-tmux-harness-dispatch.md  013-policy-driven-rigour-and-cartography.md  014-vaultforeman-absorption-and-retirement.md  015-profile-a-worktree-contract.md  018-woof-owned-herdr-session.md  (+2 more)
examples/: safety-model.md
gate/: __init__.py  write.py
languages/: go.toml  python.toml  rust.toml  typescript.toml
lib/: audit_filter.py
schemas/: agents.schema.json  backlog.schema.json  brainstorm.schema.json  check-result.schema.json  critique.schema.json  disposition.schema.json  docs-paths.schema.json  epic.schema.json  executor-result.schema.json  freshness.schema.json  gate.schema.json  jsonl-events.schema.json  language-registry.schema.json  node-input.schema.json  node-output.schema.json  plan.schema.json  planning-node-input.schema.json  planning-node-output.schema.json  policy.schema.json  prerequisites.schema.json  project-config.schema.json  quality-gates-baseline.schema.json  quality-gates.schema.json  readiness-result.schema.json  test-markers.schema.json  transaction-manifest.schema.json
scripts/: first-time-setup.sh  gen_woof_brainstorm.py  install-tmux-harness.sh  refresh-cartography  vendor_brainstorm.py
tests/: conftest.py  support.py
(+256 files in other folders)
