[project]
name = "woof"
version = "0.1.6"
description = "Python CLI for agentic multi-step software delivery through a deterministic graph"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/krazyuniks/woof"
Repository = "https://github.com/krazyuniks/woof"
Issues = "https://github.com/krazyuniks/woof/issues"

[project.scripts]
woof = "woof.cli.main:main"

[dependency-groups]
dev = [
    "prek>=0.3.11",
    "pytest>=8.3",
    "ruff>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/woof"]
# schemas/playbooks/languages are engine runtime data; skills are the Claude Code
# operator bundles. All ship in the wheel so they travel with `uv tool install`
# and a skill installer can extract them from the package.
force-include = { "schemas" = "schemas", "playbooks" = "playbooks", "languages" = "languages", "skills" = "skills" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
markers = [
    "host_only: marks tests requiring host tools such as ajv, git, or uv",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",
]
